# canny_edge_my_face

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: canny.launch  launch.launch
src/: canny_face.cpp
